fix slaider overflow modal accordion

--- a/css/main.css
+++ b/css/main.css
@@ -1348,7 +1348,8 @@ input, textarea {
   display: flex;
   display: flex;
   justify-content: flex-end;
-  color: inherit; }
+  color: inherit;
+  cursor: pointer; }
   @media screen and (max-width: 480px) {
     .accordion {
       width: 100%; } }
